--- a/compare/bower.json
+++ b/compare/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "BackstopJS_compare",
+  "name": "ImageDiffTesterJSHtmlCompareTool",
   "version": "0.0.0",
   "main": "index.html",
   "ignore": [
